[workspace]
members = []

[workspace.package]
version = "0.8.0"
edition = "2021"

[package]
name = "oasysdb"
version = { workspace = true }
edition = { workspace = true }
authors = ["Edwin Kys"]

[dependencies]
uuid = { version = "1.10.0", features = ["v4"] }
tokio = { version = "1.39.3", features = ["rt-multi-thread", "macros"] }
clap = "4.5.16"

# gRPC-related dependencies
tonic = "0.12.1"
prost = "0.13.1"

# Serialization-related dependencies
serde = { version = "1.0.208", features = ["derive"] }

# Parallelism-related dependencies
simsimd = "5.0.1"
rayon = "1.10.0"

# Logging-related dependencies
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Utility dependencies
regex = "1.10.6"
url = "2.5.2"
rand = "0.8.5"
async-trait = "0.1.81"
reqwest = "0.12.7"
dotenv = "0.15.0"

[dependencies.sqlx]
version = "0.8.0"
default-features = false
features = ["postgres", "runtime-tokio", "macros"]

[build-dependencies]
tonic-build = "0.12"
