[package]
name = "oasysdb"
version = "0.8.0"
edition = "2021"
authors = ["Edwin Kys"]

[dependencies]
tokio = { version = "1.39.3", features = ["rt-multi-thread", "macros"] }
clap = "4.5.16"

# gRPC-related dependencies
tonic = "0.12.1"
prost = "0.13.1"

# Serialization-related dependencies
serde = { version = "1.0.208", features = ["derive"] }
bincode = "1.3.3"

# Parallelism-related dependencies
simsimd = "5.0.1"
rayon = "1.10.0"

# Logging-related dependencies
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Utility dependencies
rand = "0.8.5"
dotenv = "0.15.0"

[build-dependencies]
tonic-build = "0.12"
