[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "oasysdb"
requires-python = ">=3.8"
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Text Processing :: Indexing",
]

[project.urls]
repository = "https://github.com/oasysai/oasysdb"
issues = "https://github.com/oasysai/oasysdb/issues"
changelog = "https://github.com/oasysai/oasysdb/blob/main/docs/changelog.md"

[tool.maturin]
python-source = "py"
features = ["pyo3/extension-module", "py"]
